--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
-    "name": "mcbece",
     "version": 2,
     "builds": [
         {
-            "src": "./app.js",
+            "src": "app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "app.js"
         }
     ]
 }
