--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     },
     "scripts": {
         "start": "node app",
-        "dev:start": "nodemon app"
+        "vercel:start": "node app --on-vercel",
+        "dev:start": "nodemon app",
+        "mobile:dev:start": "nodemon app --mobile-dev",
+        "vercel:dev:start": "nodemon app --on-vercel"
     }
 }
