--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     },
     "dependencies": {
         "axios": "^0.25.0",
-        "cookie-parser": "^1.4.6",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "github-markdown-css": "^5.1.0",
-        "mdui": "^1.0.2"
+        "mdui": "^1.0.2",
+        "sass": "^1.49.0"
     },
     "devDependencies": {
         "eruda": "^2.4.1",
