feat: 支持在编辑 grammar 数据时更灵活的定义需加载的列表

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     },
     "scripts": {
         "start": "node app",
-        "dev:start": "nodemon app",
-        "vercel:start": "node app --use-cdn"
+        "dev:start": "nodemon app"
     }
 }
