--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     },
     "dependencies": {
         "axios": "^0.25.0",
-        "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "fast-copy": "^2.1.1",
         "github-markdown-css": "^5.1.0",
         "mdui": "^1.0.2",
+        "pug": "^3.0.2",
         "sass": "^1.49.0"
     },
     "devDependencies": {
