--- a/package.json
+++ b/package.json
@@ -17,21 +17,33 @@
     "dependencies": {
         "axios": "^0.25.0",
         "express": "^4.17.1",
+        "fast-copy": "^2.1.1",
         "github-markdown-css": "^5.1.0",
         "mdui": "^1.0.2",
         "pug": "^3.0.2",
-        "register-service-worker": "^1.7.2",
-        "sass": "^1.49.0"
+        "register-service-worker": "^1.7.2"
     },
     "devDependencies": {
         "eruda": "^2.4.1",
         "eruda-dom": "^2.0.0",
         "eruda-fps": "^2.0.0",
         "eruda-timing": "^2.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-header": "^2.0.9",
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^5.1.0",
+        "gulp-sourcemaps": "^3.0.0",
+        "rollup": "^2.70.1",
+        "rollup-plugin-uglify": "^6.0.4",
+        "sass": "^1.49.9"
     },
     "scripts": {
-        "start": "node app",
-        "dev:start": "nodemon app"
+        "s": "node app",
+        "js": "rollup --config",
+        "css": "gulp",
+        "g": "npm run js && npm run css"
     }
 }
