--- a/package.json
+++ b/package.json
@@ -21,14 +21,10 @@
         "github-markdown-css": "^5.1.0",
         "mdui": "^1.0.2",
         "pug": "^3.0.2",
-        "register-service-worker": "^1.7.2"
+        "register-service-worker": "^1.7.2",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "eruda": "^2.4.1",
-        "eruda-dom": "^2.0.0",
-        "eruda-fps": "^2.0.0",
-        "eruda-timing": "^2.0.0",
-        "morgan": "^1.10.0",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
@@ -44,6 +40,6 @@
         "s": "node app",
         "js": "rollup --config",
         "css": "gulp",
-        "g": "npm run js && npm run css"
+        "g": "npm run css && npm run js"
     }
 }
