--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
         "fast-copy": "^2.1.1",
         "github-markdown-css": "^5.1.0",
         "mdui": "^1.0.2",
+        "morgan": "^1.10.0",
         "pug": "^3.0.2",
-        "register-service-worker": "^1.7.2",
-        "morgan": "^1.10.0"
+        "register-service-worker": "^1.7.2"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^13.1.3",
+        "events": "^3.3.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-header": "^2.0.9",
