--- a/package.json
+++ b/package.json
@@ -31,17 +31,24 @@
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-header": "^2.0.9",
+        "gulp-pug": "^5.0.0",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
+        "node-sass-package-importer": "^5.3.2",
         "rollup": "^2.70.1",
         "rollup-plugin-uglify": "^6.0.4",
-        "sass": "^1.49.9"
+        "sass": "^1.49.9",
+        "serve": "^13.0.2",
+        "through-gulp": "^0.5.0"
     },
     "scripts": {
         "s": "node app",
-        "js": "rollup --config",
-        "css": "gulp",
-        "g": "npm run css && npm run js"
+        "s-s": "serve public --listen 8080 --debug",
+        "g": "gulp && npm run g-js",
+        "g-js": "rollup --config",
+        "g-css": "gulp css",
+        "g-html": "gulp html",
+        "g-data": "gulp data"
     }
 }
