--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "axios": "^0.25.0",
         "express": "^4.17.1",
         "fast-copy": "^2.1.1",
+        "fast-equals": "^4.0.1",
         "github-markdown-css": "^5.1.0",
         "idb": "^7.0.1",
         "mdui": "^1.0.2",
