feat(core): 增加了键盘控制，优化了列表加载逻辑

--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
         "github-markdown-css": "^5.1.0",
         "idb": "^7.0.1",
         "mdui": "^1.0.2",
+        "merge-options": "^3.0.4",
         "morgan": "^1.10.0",
         "pug": "^3.0.2",
-        "register-service-worker": "^1.7.2"
+        "register-service-worker": "^1.7.2",
+        "serialize-javascript": "^6.0.0"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^13.1.3",
-        "events": "^3.3.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-header": "^2.0.9",
