--- a/package.json
+++ b/package.json
@@ -10,25 +10,21 @@
         "type": "git",
         "url": "https://github.com/mcbece/mcbece.git"
     },
-    "bugs": {
-        "url": "https://github.com/mcbece/mcbece/issues",
-        "email": "pfis1737@qq.com"
-    },
+    "bugs": "https://github.com/mcbece/mcbece/issues",
     "dependencies": {
-        "axios": "^0.25.0",
-        "express": "^4.17.1",
+        "fast-copy": "^2.1.1",
+        "fast-equals": "^4.0.1",
         "github-markdown-css": "^5.1.0",
+        "idb": "^7.0.1",
         "mdui": "^1.0.2",
-        "morgan": "^1.10.0",
-        "pug": "^3.0.2",
+        "merge-options": "^3.0.4",
+        "register-service-worker": "^1.7.2",
         "serialize-javascript": "^6.0.0"
     },
     "devDependencies": {
         "@rollup/plugin-alias": "^3.1.9",
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^13.1.3",
-        "fast-copy": "^2.1.1",
-        "fast-equals": "^4.0.1",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-header": "^2.0.9",
@@ -36,9 +32,7 @@
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
-        "idb": "^7.0.1",
-        "merge-options": "^3.0.4",
-        "register-service-worker": "^1.7.2",
+        "pug": "^3.0.2",
         "rollup": "^2.70.1",
         "rollup-plugin-uglify": "^6.0.4",
         "sass": "^1.49.9",
@@ -46,11 +40,8 @@
     },
     "scripts": {
         "d": "npm run g && npm run s",
-        "g": "npm run g-css && npm run g-js",
-        "s": "node app",
-        "d-s": "npm run g-s && npm run s-s",
-        "g-s": "gulp",
-        "s-s": "serve public --listen 8080 --debug",
+        "g": "gulp",
+        "s": "serve public --listen 8080 --debug",
         "g-js": "gulp js",
         "g-css": "gulp css",
         "g-html": "gulp html",
