--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     },
     "devDependencies": {
         "@rollup/plugin-alias": "^3.1.9",
-        "@rollup/plugin-commonjs": "^21.0.2",
-        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-commonjs": "^21.1.0",
+        "@rollup/plugin-node-resolve": "^13.3.0",
+        "@rollup/plugin-terser": "^0.4.3",
+        "fast-copy": "^2.1.7",
+        "fast-equals": "^4.0.3",
+        "github-markdown-css": "^5.2.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-header": "^2.0.9",
@@ -32,11 +36,15 @@
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
+        "idb": "^7.1.1",
+        "mdui": "^1.0.2",
+        "merge-options": "^3.0.4",
         "pug": "^3.0.2",
-        "rollup": "^2.70.1",
-        "rollup-plugin-uglify": "^6.0.4",
-        "sass": "^1.49.9",
-        "serve": "^13.0.2"
+        "register-service-worker": "^1.7.2",
+        "rollup": "^2.79.1",
+        "sass": "^1.62.1",
+        "serialize-javascript": "^6.0.1",
+        "serve": "^13.0.4"
     },
     "scripts": {
         "d": "npm run g && npm run s",
